--- a/HOME/home.html
+++ b/HOME/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futech-Login</title>
 
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/HOME/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -17,9 +17,9 @@
         <div class="menusup"> 
             <img src="/img/logotipo.png" alt="">
             <ul>
-                <li><a href="home.html">Início</a> </li>
-                <li><a href="help.html#sobre2">Sobre</a> </li>
-                <li><a href="help.html#contato2">Contato</a> </li>
+                <li><a href="/HOME/home.html">Início</a> </li>
+                <li><a href="/HELP/help.html#sobre2">Sobre</a> </li>
+                <li><a href="/HELP/help.html#contato2">Contato</a> </li>
             </ul>
             <section class="logout">
                 <a href="#" onclick="logout()">SAIR</a>
@@ -34,13 +34,13 @@
    
     <footer>
         <div class="footer-coluna1">
-            <a href="home.html">Início</a>
-            <a href="help.html#sobre2">Sobre</a>
-            <a href="help.html#contato2">Contato</a>
+            <a href="/HOME/home.html">Início</a>
+            <a href="/HELP/help.html#sobre2">Sobre</a>
+            <a href="/HELP/help.html#contato2">Contato</a>
         </div>
         <div class="footer-coluna2">
-            <a href="help.html#ajuda">Ajuda</a>
-            <a href="help.html#termos">Termos</a>
+            <a href="/HELP/help.html#ajuda">Ajuda</a>
+            <a href="/HELP/help.html#termos">Termos</a>
         </div>
         <div class="footer-imagem">
             <a href="https://bid.cbf.com.br/" target="_blank">
