--- a/LOGIN/login.html
+++ b/LOGIN/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futech-Login</title>
 
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/LOGIN/login.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,9 @@
         <div class="menusup"> 
             <img src="/img/logotipo.png" alt="">
             <ul>
-                <li><a href="home.html">Início</a> </li>
-                <li><a href="help.html#sobre2">Sobre</a> </li>
-                <li><a href="help.html#contato2">Contato</a> </li>
+                <li><a href="/HOME/home.html">Início</a> </li>
+                <li><a href="/HELP/help.html">Sobre</a> </li>
+                <li><a href="/HELP/help.html#contato2">Contato</a> </li>
             </ul>
 
         </div>
